--- a/GitpodTemplate.cabal
+++ b/GitpodTemplate.cabal
@@ -20,7 +20,9 @@ source-repository head
   location:            https://github.com/gitpod/GitpodTemplate.git
 
 common common-options
-  build-depends:       base ^>= 4.13.0.0
+  build-depends:       base ^>= 4.13.0.0,
+                       text,
+                       websockets >= 0.12 && < 0.13
   
   ghc-options:         -Wall
                        -Wcompat
@@ -38,6 +40,8 @@ common common-options
     ghc-options:       -Wmissing-deriving-strategies
 
   default-language:    Haskell2010
+
+  default-extensions:  OverloadedStrings
 
 library
   import:              common-options
